redo notebook imports

--- a/notebooks/experiment.ipynb
+++ b/notebooks/experiment.ipynb
@@ -21,17 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "931a8e46-ed43-464a-857c-3e59f2e2012f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.chdir('/Users/shahules/Myprojects/synthetic-qa-paper/src')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "c8ccd147-ae07-40c1-872b-4a0d1bda44f4",
    "metadata": {},
@@ -48,7 +37,16 @@
     }
    ],
    "source": [
-    "from rag.config import ComponentConfig, Config,instantiate_component, DirectoryConfig, RetrieverConfig"
+    "from ragbench import RAGBuilder\n",
+    "from ragbench import ComponentConfig, Config, DirectoryConfig, RetrieverConfig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06bc57cd-a1f8-4f73-b830-83b296353095",
+   "metadata": {},
+   "source": [
+    "## Build RAG"
    ]
   },
   {
@@ -73,38 +71,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6b5a3485-bec8-4bff-af4b-48815c7c791b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Config(directory=DirectoryConfig(name='../datasets/Sample_Docs_Markdown/', params={'sample_size': 1, 'show_progress': True}), experiment_name='default_experiment', text_splitter=ComponentConfig(class_path='langchain_text_splitters.RecursiveCharacterTextSplitter', params={'chunk_size': 512, 'chunk_overlap': 100}), embedding_model=ComponentConfig(class_path='langchain_openai.OpenAIEmbeddings', params={}), llm=ComponentConfig(class_path='langchain_openai.ChatOpenAI', params={'model': 'gpt-4o'}), retriever=RetrieverConfig(type='vanilla', params={'search_kwargs': {'k': 2}}), model_prompt='Answer the user query based on the context')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config.model_dump()\n",
-    "config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "96aa0652-c1aa-4c69-a1c9-a20e5888d1e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rag.rag import RAGBuilder"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "18749ad2-877c-489d-a646-345d0ece98a2",
    "metadata": {},
@@ -119,6 +85,14 @@
    ],
    "source": [
     "rag = RAGBuilder(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbc696e-ff88-4109-9b7c-a52f193921dc",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
    ]
   },
   {
@@ -211,18 +185,9 @@
    "outputs": [],
    "source": [
     "from ragas.metrics import ContextPrecision, FactualCorrectness\n",
-    "metrics = [FactualCorrectness()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "ad01b5ec-a4f9-4f2a-a725-831ada72371b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from ragas.llms import llm_factory\n",
-    "llm = llm_factory()"
+    "llm = llm_factory()\n",
+    "metrics = [FactualCorrectness()]"
    ]
   },
   {
@@ -252,51 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "00fdcd37-16d9-4b9c-881c-c097e70e42b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"name\":\"../datasets/Sample_Docs_Markdown/\",\"params\":{\"sample_size\":1,\"show_progress\":true}}'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config.directory.model_dump_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f727a00c-564b-4a08-8f96-f8a3aef84932",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ads/fss/fs'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.path.join('ads','fss','fs')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "0d77fefd-a6dd-4301-a6b2-d16ce16f0a5d",
+   "id": "1d62a2f8-76f8-4bca-8143-d23ea81783c0",
    "metadata": {},
    "outputs": [],
    "source": []
